<resources>
    <string name="app_name">Notícias</string>
    <string name="tools_article_title">Melbourne, na Austrália, volta a decretar confinamento contra o
        coronavírus - G1</string>
    <string name="tools_article_desc">Medidas de restrição na circulação na cidade do estado de
        Victoria deve durar pelo menos seis semanas.Medidas de restrição na circulação na cidade do estado de Victoria deve durar pelo menos seis semanas.Medidas de restrição na circulação na cidade do estado de Victoria deve durar pelo menos seis semanas.</string>
    <string name="tools_article_content">O presidente dos Estados Unidos, Donald Trump, pediu neste domingo (27) que seu rival democrata na disputa pela Casa Branca, Joe Biden, faça um teste de drogas antes ou depois do primeiro debate, que… [+1434 chars]</string>
    <string name="description_image">Image representing the article</string>
    <string name="tools_font_and_date">Globo - 27/09/2020</string>
    <string name="got_to_font">Ir à fonte</string>
    <string name="more_info">Mais Informações</string>
    <string name="go_back_button">Voltar ao topo da página</string>
</resources>
